[gd_scene load_steps=13 format=3 uid="uid://86sp3suvs26w"]

[ext_resource type="Script" uid="uid://cxjj03ckj6la2" path="res://scripts/zombie.gd" id="1_httt1"]
[ext_resource type="Texture2D" uid="uid://jadhsk5dbjed" path="res://assets/sprites/pirate-zombie-skeleton-preview.png" id="2_httt1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xepks"]
atlas = ExtResource("2_httt1")
region = Rect2(0, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gx57"]
atlas = ExtResource("2_httt1")
region = Rect2(32, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycv6i"]
atlas = ExtResource("2_httt1")
region = Rect2(64, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjjxt"]
atlas = ExtResource("2_httt1")
region = Rect2(0, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pfmu"]
atlas = ExtResource("2_httt1")
region = Rect2(32, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fthk"]
atlas = ExtResource("2_httt1")
region = Rect2(64, 128, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1ey3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xepks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gx57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycv6i")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjjxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pfmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fthk")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2gj0"]
size = Vector2(14, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xepks"]
size = Vector2(14, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_httt1"]
size = Vector2(14, 17)

[node name="Zombie" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_httt1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemies"]]
z_index = 99
scale = Vector2(0.399999, 0.399999)
sprite_frames = SubResource("SpriteFrames_1ey3r")
animation = &"left"
autoplay = "left"
frame_progress = 0.14158

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-11, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(11, 0)

[node name="minushealthzone" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="minushealthzone"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_p2gj0")

[node name="Timer" type="Timer" parent="minushealthzone"]

[node name="fireballzone" type="Area2D" parent="." groups=["enemies"]]
z_index = 99
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="fireballzone" groups=["enemies"]]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_xepks")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_httt1")

[connection signal="body_entered" from="minushealthzone" to="." method="_on_minushealthzone_body_entered"]
[connection signal="timeout" from="minushealthzone/Timer" to="." method="_on_timer_timeout"]
